feat: fix broken link

--- a/docs/docs/reference/package-test.mdx
+++ b/docs/docs/reference/package-test.mdx
@@ -82,7 +82,7 @@ In the example from `examples/getting_started/integration/api_test.go` we see tw
 
 ### ApiServer extended test case
 
-In the [Integration tests for your API](../getting_started/integration_tests.md) example, we saw the following test:
+In the [Integration tests for your API] example, we saw the following test:
 
 [embedmd]:# (../../examples/getting_started/integration/api_test.go /func \(s \*ApiTestSuite\) Test_ToEuro/ /\n}/)
 ```go
