change message attributes from msi to mss
support unmarshalling legacy messages

--- a/docs/docs/quickstart/testing/test-your-consumer.mdx
+++ b/docs/docs/quickstart/testing/test-your-consumer.mdx
@@ -124,7 +124,7 @@ func (s *ConsumerTestSuite) TestSuccess() *suite.StreamTestCase {
 						Text:   "do it",
 						Status: "pending",
 					},					
-					ExpectedAttributes: map[string]interface{}{},
+					ExpectedAttributes: map[string]string{},
 				},
 			},
 		},
