--- a/docs/docs/overview.mdx
+++ b/docs/docs/overview.mdx
@@ -4,7 +4,7 @@ slug: /
 title: Overview
 ---
 
-import PrimaryUseCases from './components.jsx';
+import { PrimaryUseCases } from './components.jsx';
 
 Gosoline is a Golang-based application framework specialized for building microservices in the cloud. It provides tools for handling most of the common challenges like configuration, logging, structured code execution, handling http requests, asynchronous message processing, writing integration tests and much more.
 
