log: Split logger fields into local and global fields and made them mutable;
This commit introduces a distinction between local and global logger
fields in a context (there used to be only global fields in the past).
Global fields are forwarded to downstream services when using the stream
framework while local fields are kept local to the current application.
This can be useful to establish fields shared for the duration of a
single request between different services without affecting downstream
services.
Additionally, this commit introduces the notation of mutating these
fields. If a context already contains fields, a callee can thus change
fields in a context, allowing the caller to also log these fields.
Support was added for the stream and apiserver frameworks already - when
handling a message or a request, we are now able to log the returned
error in case of a failure with the fields attached to the context by
the consumer callback or api handler.

This commit is a breaking change. The following changes have been performed:

- `log.NewLoggerContext` has been removed from the public API
- `log.AppendLoggerContextField` is now called `log.AppendGlobalLoggerContextFields`

--- a/docs/docs/quickstart/api-server/create-a-money-exchange-app.mdx
+++ b/docs/docs/quickstart/api-server/create-a-money-exchange-app.mdx
@@ -144,7 +144,7 @@ You'll use this later to create a new `euroHandler`.
 Then, you implemented `euroHandler.Handle()` for handling HTTP requests:
 
 ```go title=handler.go
-func (h *euroHandler) Handle(requestContext context.Context, request *apiserver.Request) (response *apiserver.Response, error error) {
+func (h *euroHandler) Handle(requestContext context.Context, request *apiserver.Request) (response *apiserver.Response, err error) {
     // 1
 	currency := request.Params.ByName("currency")
 	amountString := request.Params.ByName("amount")
@@ -213,7 +213,7 @@ The logic here is very similar to the logic for `euroHandler`.
 Finally, you implemented `euroAtDateHandler.Handle()` for handling HTTP requests:
 
 ```go title=handler.go
-func (h *euroAtDateHandler) Handle(requestContext context.Context, request *apiserver.Request) (response *apiserver.Response, error error) {
+func (h *euroAtDateHandler) Handle(requestContext context.Context, request *apiserver.Request) (response *apiserver.Response, err error) {
     // 1
 	currency := request.Params.ByName("currency")
 	dateString := request.Params.ByName("date")
