Update docs for httpserver
- Updated tutorials, guides, references
- Added a new guide covering multiple http servers
- Replaced hard-coded snippets with new CodeBlock component
- Retested all code
- Updated links

--- a/docs/docs/how-to/write-health-checks.mdx
+++ b/docs/docs/how-to/write-health-checks.mdx
@@ -49,8 +49,8 @@ Host: localhost:8090
 You can configure the health-check path and port with the following configuration:
 
 ```yaml
-api:
-  health:
+httpserver:
+  health-check:
     path: /health
     port: 8090
 ```
